--- a/app/views/hobbies/edit.html.haml
+++ b/app/views/hobbies/edit.html.haml
@@ -1,5 +1,6 @@
 .row
 	.span5.col-md-offset-1
+		%h4 Edit Hobby
 		= form_for(@hobby, url: update_hobbies_path(@hobby.id), method: :post) do |h|
 			= render :partial => 'form', locals: { h: h }
 			%dt
